# tauri-action-test

./: .gitignore  package.json  pnpm-lock.yaml
.github/workflows/: tauri-action.yml
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.windows.conf.json
src-tauri/resources/windows/: scripto.ps1
src-tauri/src/: lib.rs  main.rs
